--- a/KinectWings/en.lproj/MainMenu.xib
+++ b/KinectWings/en.lproj/MainMenu.xib
@@ -1297,7 +1297,7 @@
 			<object class="NSWindowTemplate" id="972006081">
 				<int key="NSWindowStyleMask">15</int>
 				<int key="NSWindowBacking">2</int>
-				<string key="NSWindowRect">{{335, 390}, {640, 703}}</string>
+				<string key="NSWindowRect">{{335, 390}, {640, 560}}</string>
 				<int key="NSWTFlags">1685585920</int>
 				<string key="NSWindowTitle">KinectWings</string>
 				<string key="NSWindowClass">JBWindow</string>
@@ -1311,7 +1311,7 @@
 						<object class="NSCustomView" id="458654430">
 							<reference key="NSNextResponder" ref="439893737"/>
 							<int key="NSvFlags">292</int>
-							<string key="NSFrame">{{39, 7}, {49, 160}}</string>
+							<string key="NSFrame">{{15, 94}, {49, 160}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
 							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="109854171"/>
@@ -1322,10 +1322,10 @@
 						<object class="NSCustomView" id="109854171">
 							<reference key="NSNextResponder" ref="439893737"/>
 							<int key="NSvFlags">292</int>
-							<string key="NSFrame">{{96, 7}, {49, 160}}</string>
+							<string key="NSFrame">{{72, 94}, {49, 160}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="438068151"/>
+							<reference key="NSNextKeyView" ref="272353977"/>
 							<int key="NSViewLayerContentsRedrawPolicy">2</int>
 							<string key="NSReuseIdentifierKey">_NS:1192</string>
 							<string key="NSClassName">VerticalGuageView</string>
@@ -1333,7 +1333,7 @@
 						<object class="NSButton" id="272353977">
 							<reference key="NSNextResponder" ref="439893737"/>
 							<int key="NSvFlags">292</int>
-							<string key="NSFrame">{{159, 3}, {102, 48}}</string>
+							<string key="NSFrame">{{13, 16}, {102, 48}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
 							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="307885043"/>
@@ -1362,17 +1362,17 @@
 						<object class="NSButton" id="307885043">
 							<reference key="NSNextResponder" ref="439893737"/>
 							<int key="NSvFlags">292</int>
-							<string key="NSFrame">{{269, 3}, {102, 48}}</string>
+							<string key="NSFrame">{{123, 16}, {102, 48}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="938460561"/>
+							<reference key="NSNextKeyView" ref="438068151"/>
 							<int key="NSViewLayerContentsRedrawPolicy">2</int>
 							<string key="NSReuseIdentifierKey">_NS:687</string>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="295211776">
 								<int key="NSCellFlags">67239424</int>
 								<int key="NSCellFlags2">134217728</int>
-								<string key="NSContents">Takeoff!</string>
+								<string key="NSContents">Configure</string>
 								<reference key="NSSupport" ref="142099187"/>
 								<string key="NSCellIdentifier">_NS:687</string>
 								<reference key="NSControlView" ref="307885043"/>
@@ -1387,7 +1387,7 @@
 						<object class="NSTextField" id="938460561">
 							<reference key="NSNextResponder" ref="439893737"/>
 							<int key="NSvFlags">293</int>
-							<string key="NSFrame">{{390, 20}, {233, 46}}</string>
+							<string key="NSFrame">{{390, -3}, {233, 46}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
 							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView"/>
@@ -1428,7 +1428,7 @@
 						<object class="NSCustomView" id="291780441">
 							<reference key="NSNextResponder" ref="439893737"/>
 							<int key="NSvFlags">274</int>
-							<string key="NSFrame">{{0, 223}, {640, 480}}</string>
+							<string key="NSFrame">{{0, 80}, {640, 480}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
 							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="458654430"/>
@@ -1439,10 +1439,10 @@
 						<object class="NSTextField" id="438068151">
 							<reference key="NSNextResponder" ref="439893737"/>
 							<int key="NSvFlags">293</int>
-							<string key="NSFrame">{{390, 74}, {233, 46}}</string>
+							<string key="NSFrame">{{390, 26}, {233, 46}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="272353977"/>
+							<reference key="NSNextKeyView" ref="938460561"/>
 							<int key="NSViewLayerContentsRedrawPolicy">2</int>
 							<string key="NSReuseIdentifierKey">_NS:3944</string>
 							<bool key="NSEnabled">YES</bool>
@@ -1458,14 +1458,14 @@
 							</object>
 						</object>
 					</array>
-					<string key="NSFrameSize">{640, 703}</string>
+					<string key="NSFrameSize">{640, 560}</string>
 					<reference key="NSSuperview"/>
 					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="291780441"/>
 					<bool key="NSViewIsLayerTreeHost">YES</bool>
 					<int key="NSViewLayerContentsRedrawPolicy">2</int>
 				</object>
-				<string key="NSScreenRect">{{0, 0}, {1680, 1028}}</string>
+				<string key="NSScreenRect">{{0, 0}, {1920, 1178}}</string>
 				<string key="NSMinSize">{320, 262}</string>
 				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
 				<bool key="NSWindowIsRestorable">YES</bool>
@@ -2160,22 +2160,6 @@
 					<int key="connectionID">532</int>
 				</object>
 				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">_rightVerticalGuageView</string>
-						<reference key="source" ref="976324537"/>
-						<reference key="destination" ref="109854171"/>
-					</object>
-					<int key="connectionID">542</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">_leftVerticalGuageView</string>
-						<reference key="source" ref="976324537"/>
-						<reference key="destination" ref="458654430"/>
-					</object>
-					<int key="connectionID">543</int>
-				</object>
-				<object class="IBConnectionRecord">
 					<object class="IBActionConnection" key="connection">
 						<string key="label">takeOff:</string>
 						<reference key="source" ref="976324537"/>
@@ -2214,6 +2198,22 @@
 						<reference key="destination" ref="295211776"/>
 					</object>
 					<int key="connectionID">572</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">_rightVerticalGuageView</string>
+						<reference key="source" ref="976324537"/>
+						<reference key="destination" ref="109854171"/>
+					</object>
+					<int key="connectionID">542</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">_leftVerticalGuageView</string>
+						<reference key="source" ref="976324537"/>
+						<reference key="destination" ref="458654430"/>
+					</object>
+					<int key="connectionID">543</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -2740,9 +2740,9 @@
 						<int key="objectID">372</int>
 						<reference key="object" ref="439893737"/>
 						<array class="NSMutableArray" key="children">
+							<reference ref="291780441"/>
 							<reference ref="458654430"/>
 							<reference ref="109854171"/>
-							<reference ref="291780441"/>
 							<reference ref="938460561"/>
 							<reference ref="438068151"/>
 							<reference ref="272353977"/>
@@ -3224,17 +3224,6 @@
 						<reference key="parent" ref="963351320"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">539</int>
-						<reference key="object" ref="458654430"/>
-						<array class="NSMutableArray" key="children"/>
-						<reference key="parent" ref="439893737"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">541</int>
-						<reference key="object" ref="109854171"/>
-						<reference key="parent" ref="439893737"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">549</int>
 						<reference key="object" ref="272353977"/>
 						<array class="NSMutableArray" key="children">
@@ -3263,6 +3252,7 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">563</int>
 						<reference key="object" ref="291780441"/>
+						<array class="NSMutableArray" key="children"/>
 						<reference key="parent" ref="439893737"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -3290,6 +3280,16 @@
 						<int key="objectID">570</int>
 						<reference key="object" ref="295211776"/>
 						<reference key="parent" ref="307885043"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">541</int>
+						<reference key="object" ref="109854171"/>
+						<reference key="parent" ref="439893737"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">539</int>
+						<reference key="object" ref="458654430"/>
+						<reference key="parent" ref="439893737"/>
 					</object>
 				</array>
 			</object>
