--- a/KinectWings/en.lproj/MainMenu.xib
+++ b/KinectWings/en.lproj/MainMenu.xib
@@ -3,24 +3,26 @@
 	<data>
 		<int key="IBDocument.SystemTarget">1070</int>
 		<string key="IBDocument.SystemVersion">11D50d</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2177</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
 		<string key="IBDocument.AppKitVersion">1138.32</string>
 		<string key="IBDocument.HIToolboxVersion">568.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin</string>
-			<string key="NS.object.0">2177</string>
+			<string key="NS.object.0">2182</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
-			<string>NSView</string>
-			<string>NSMenu</string>
-			<string>NSWindowTemplate</string>
 			<string>NSMenuItem</string>
-			<string>NSTextField</string>
+			<string>NSMenu</string>
 			<string>NSTextFieldCell</string>
-			<string>NSCustomView</string>
 			<string>NSButtonCell</string>
 			<string>NSButton</string>
+			<string>NSImageView</string>
+			<string>NSImageCell</string>
+			<string>NSCustomView</string>
 			<string>NSCustomObject</string>
+			<string>NSView</string>
+			<string>NSWindowTemplate</string>
+			<string>NSTextField</string>
 		</array>
 		<array key="IBDocument.PluginDependencies">
 			<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -1308,28 +1310,6 @@
 					<reference key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
 					<array class="NSMutableArray" key="NSSubviews">
-						<object class="NSCustomView" id="458654430">
-							<reference key="NSNextResponder" ref="439893737"/>
-							<int key="NSvFlags">292</int>
-							<string key="NSFrame">{{15, 94}, {49, 160}}</string>
-							<reference key="NSSuperview" ref="439893737"/>
-							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="109854171"/>
-							<int key="NSViewLayerContentsRedrawPolicy">2</int>
-							<string key="NSReuseIdentifierKey">_NS:1192</string>
-							<string key="NSClassName">VerticalGuageView</string>
-						</object>
-						<object class="NSCustomView" id="109854171">
-							<reference key="NSNextResponder" ref="439893737"/>
-							<int key="NSvFlags">292</int>
-							<string key="NSFrame">{{72, 94}, {49, 160}}</string>
-							<reference key="NSSuperview" ref="439893737"/>
-							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="272353977"/>
-							<int key="NSViewLayerContentsRedrawPolicy">2</int>
-							<string key="NSReuseIdentifierKey">_NS:1192</string>
-							<string key="NSClassName">VerticalGuageView</string>
-						</object>
 						<object class="NSButton" id="272353977">
 							<reference key="NSNextResponder" ref="439893737"/>
 							<int key="NSvFlags">292</int>
@@ -1365,7 +1345,7 @@
 							<string key="NSFrame">{{123, 16}, {102, 48}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="438068151"/>
+							<reference key="NSNextKeyView" ref="513623618"/>
 							<int key="NSViewLayerContentsRedrawPolicy">2</int>
 							<string key="NSReuseIdentifierKey">_NS:687</string>
 							<bool key="NSEnabled">YES</bool>
@@ -1387,10 +1367,9 @@
 						<object class="NSTextField" id="938460561">
 							<reference key="NSNextResponder" ref="439893737"/>
 							<int key="NSvFlags">293</int>
-							<string key="NSFrame">{{390, -3}, {233, 46}}</string>
+							<string key="NSFrame">{{494, 0}, {129, 46}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView"/>
 							<int key="NSViewLayerContentsRedrawPolicy">2</int>
 							<string key="NSReuseIdentifierKey">_NS:3944</string>
 							<bool key="NSEnabled">YES</bool>
@@ -1428,10 +1407,69 @@
 						<object class="NSCustomView" id="291780441">
 							<reference key="NSNextResponder" ref="439893737"/>
 							<int key="NSvFlags">274</int>
+							<array class="NSMutableArray" key="NSSubviews">
+								<object class="NSCustomView" id="458654430">
+									<reference key="NSNextResponder" ref="291780441"/>
+									<int key="NSvFlags">292</int>
+									<string key="NSFrame">{{13, 20}, {49, 160}}</string>
+									<reference key="NSSuperview" ref="291780441"/>
+									<reference key="NSWindow"/>
+									<reference key="NSNextKeyView" ref="109854171"/>
+									<bool key="NSViewIsLayerTreeHost">YES</bool>
+									<int key="NSViewLayerContentsRedrawPolicy">2</int>
+									<string key="NSReuseIdentifierKey">_NS:1192</string>
+									<string key="NSClassName">VerticalGuageView</string>
+								</object>
+								<object class="NSCustomView" id="109854171">
+									<reference key="NSNextResponder" ref="291780441"/>
+									<int key="NSvFlags">292</int>
+									<string key="NSFrame">{{76, 20}, {49, 160}}</string>
+									<reference key="NSSuperview" ref="291780441"/>
+									<reference key="NSWindow"/>
+									<reference key="NSNextKeyView" ref="272353977"/>
+									<bool key="NSViewIsLayerTreeHost">YES</bool>
+									<int key="NSViewLayerContentsRedrawPolicy">2</int>
+									<string key="NSReuseIdentifierKey">_NS:1192</string>
+									<string key="NSClassName">VerticalGuageView</string>
+								</object>
+								<object class="NSTextField" id="375331650">
+									<reference key="NSNextResponder" ref="291780441"/>
+									<int key="NSvFlags">266</int>
+									<string key="NSFrame">{{17, 430}, {606, 30}}</string>
+									<reference key="NSSuperview" ref="291780441"/>
+									<reference key="NSWindow"/>
+									<reference key="NSNextKeyView" ref="458654430"/>
+									<bool key="NSViewIsLayerTreeHost">YES</bool>
+									<object class="NSShadow" key="NSViewShadow">
+										<double key="NSShadowBlurRadius">4</double>
+										<object class="NSColor" key="NSShadowColor" id="881289793">
+											<int key="NSColorSpace">1</int>
+											<bytes key="NSRGB">MSAxIDEAA</bytes>
+										</object>
+									</object>
+									<int key="NSViewLayerContentsRedrawPolicy">2</int>
+									<string key="NSReuseIdentifierKey">_NS:3944</string>
+									<bool key="NSEnabled">YES</bool>
+									<object class="NSTextFieldCell" key="NSCell" id="963147066">
+										<int key="NSCellFlags">67239424</int>
+										<int key="NSCellFlags2">71303680</int>
+										<string key="NSContents"/>
+										<reference key="NSSupport" ref="78533542"/>
+										<string key="NSCellIdentifier">_NS:3944</string>
+										<reference key="NSControlView" ref="375331650"/>
+										<reference key="NSBackgroundColor" ref="177764204"/>
+										<object class="NSColor" key="NSTextColor">
+											<int key="NSColorSpace">1</int>
+											<bytes key="NSRGB">MC43MzE0NDUzMTI1IDAgMC4wMDc5MzY5MTc3MjEAA</bytes>
+										</object>
+									</object>
+								</object>
+							</array>
 							<string key="NSFrame">{{0, 80}, {640, 480}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="458654430"/>
+							<reference key="NSNextKeyView" ref="375331650"/>
+							<bool key="NSViewIsLayerTreeHost">YES</bool>
 							<int key="NSViewLayerContentsRedrawPolicy">2</int>
 							<string key="NSReuseIdentifierKey">_NS:1192</string>
 							<string key="NSClassName">GLViewController</string>
@@ -1439,7 +1477,7 @@
 						<object class="NSTextField" id="438068151">
 							<reference key="NSNextResponder" ref="439893737"/>
 							<int key="NSvFlags">293</int>
-							<string key="NSFrame">{{390, 26}, {233, 46}}</string>
+							<string key="NSFrame">{{494, 26}, {129, 46}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
 							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="938460561"/>
@@ -1448,7 +1486,7 @@
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSTextFieldCell" key="NSCell" id="504712311">
 								<int key="NSCellFlags">67239424</int>
-								<int key="NSCellFlags2">272630272</int>
+								<int key="NSCellFlags2">4194816</int>
 								<string key="NSContents">Label</string>
 								<reference key="NSSupport" ref="78533542"/>
 								<string key="NSCellIdentifier">_NS:3944</string>
@@ -1456,6 +1494,35 @@
 								<reference key="NSBackgroundColor" ref="177764204"/>
 								<reference key="NSTextColor" ref="835524917"/>
 							</object>
+						</object>
+						<object class="NSImageView" id="513623618">
+							<reference key="NSNextResponder" ref="439893737"/>
+							<int key="NSvFlags">292</int>
+							<set class="NSMutableSet" key="NSDragTypes">
+								<string>Apple PDF pasteboard type</string>
+								<string>Apple PICT pasteboard type</string>
+								<string>Apple PNG pasteboard type</string>
+								<string>NSFilenamesPboardType</string>
+								<string>NeXT Encapsulated PostScript v1.2 pasteboard type</string>
+								<string>NeXT TIFF v4.0 pasteboard type</string>
+							</set>
+							<string key="NSFrame">{{231, 20}, {20, 20}}</string>
+							<reference key="NSSuperview" ref="439893737"/>
+							<reference key="NSWindow"/>
+							<reference key="NSNextKeyView" ref="438068151"/>
+							<int key="NSViewLayerContentsRedrawPolicy">2</int>
+							<string key="NSReuseIdentifierKey">_NS:9</string>
+							<bool key="NSEnabled">YES</bool>
+							<object class="NSImageCell" key="NSCell" id="257724153">
+								<int key="NSCellFlags">130560</int>
+								<int key="NSCellFlags2">33554432</int>
+								<string key="NSCellIdentifier">_NS:9</string>
+								<int key="NSAlign">0</int>
+								<int key="NSScale">0</int>
+								<int key="NSStyle">0</int>
+								<bool key="NSAnimates">NO</bool>
+							</object>
+							<bool key="NSEditable">YES</bool>
 						</object>
 					</array>
 					<string key="NSFrameSize">{640, 560}</string>
@@ -1465,7 +1532,7 @@
 					<bool key="NSViewIsLayerTreeHost">YES</bool>
 					<int key="NSViewLayerContentsRedrawPolicy">2</int>
 				</object>
-				<string key="NSScreenRect">{{0, 0}, {1920, 1178}}</string>
+				<string key="NSScreenRect">{{0, 0}, {1680, 1028}}</string>
 				<string key="NSMinSize">{320, 262}</string>
 				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
 				<bool key="NSWindowIsRestorable">YES</bool>
@@ -2201,6 +2268,22 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
+						<string key="label">_indicatorImage</string>
+						<reference key="source" ref="976324537"/>
+						<reference key="destination" ref="513623618"/>
+					</object>
+					<int key="connectionID">575</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">_emergencyStatusField</string>
+						<reference key="source" ref="976324537"/>
+						<reference key="destination" ref="375331650"/>
+					</object>
+					<int key="connectionID">578</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
 						<string key="label">_rightVerticalGuageView</string>
 						<reference key="source" ref="976324537"/>
 						<reference key="destination" ref="109854171"/>
@@ -2741,12 +2824,11 @@
 						<reference key="object" ref="439893737"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="291780441"/>
-							<reference ref="458654430"/>
-							<reference ref="109854171"/>
-							<reference ref="938460561"/>
-							<reference ref="438068151"/>
 							<reference ref="272353977"/>
 							<reference ref="307885043"/>
+							<reference ref="513623618"/>
+							<reference ref="938460561"/>
+							<reference ref="438068151"/>
 						</array>
 						<reference key="parent" ref="972006081"/>
 					</object>
@@ -3252,7 +3334,11 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">563</int>
 						<reference key="object" ref="291780441"/>
-						<array class="NSMutableArray" key="children"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="375331650"/>
+							<reference ref="109854171"/>
+							<reference ref="458654430"/>
+						</array>
 						<reference key="parent" ref="439893737"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -3282,14 +3368,40 @@
 						<reference key="parent" ref="307885043"/>
 					</object>
 					<object class="IBObjectRecord">
+						<int key="objectID">573</int>
+						<reference key="object" ref="513623618"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="257724153"/>
+						</array>
+						<reference key="parent" ref="439893737"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">574</int>
+						<reference key="object" ref="257724153"/>
+						<reference key="parent" ref="513623618"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">576</int>
+						<reference key="object" ref="375331650"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="963147066"/>
+						</array>
+						<reference key="parent" ref="291780441"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">577</int>
+						<reference key="object" ref="963147066"/>
+						<reference key="parent" ref="375331650"/>
+					</object>
+					<object class="IBObjectRecord">
 						<int key="objectID">541</int>
 						<reference key="object" ref="109854171"/>
-						<reference key="parent" ref="439893737"/>
+						<reference key="parent" ref="291780441"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">539</int>
 						<reference key="object" ref="458654430"/>
-						<reference key="parent" ref="439893737"/>
+						<reference key="parent" ref="291780441"/>
 					</object>
 				</array>
 			</object>
@@ -3451,6 +3563,14 @@
 				<string key="569.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="57.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="570.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="573.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="574.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="576.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<real value="4" key="576.IBViewIntegration.shadowBlurRadius"/>
+				<reference key="576.IBViewIntegration.shadowColor" ref="881289793"/>
+				<real value="0.0" key="576.IBViewIntegration.shadowOffsetHeight"/>
+				<real value="0.0" key="576.IBViewIntegration.shadowOffsetWidth"/>
+				<string key="577.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="58.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="72.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="73.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -3468,7 +3588,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">572</int>
+			<int key="maxID">578</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -3494,6 +3614,8 @@
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="_angleTextField">NSTextField</string>
 						<string key="_droneVideoView">GLViewController</string>
+						<string key="_emergencyStatusField">NSTextField</string>
+						<string key="_indicatorImage">NSImageView</string>
 						<string key="_leftVerticalGuageView">VerticalGuageView</string>
 						<string key="_openGLView">DepthView</string>
 						<string key="_rightVerticalGuageView">VerticalGuageView</string>
@@ -3508,6 +3630,14 @@
 						<object class="IBToOneOutletInfo" key="_droneVideoView">
 							<string key="name">_droneVideoView</string>
 							<string key="candidateClassName">GLViewController</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="_emergencyStatusField">
+							<string key="name">_emergencyStatusField</string>
+							<string key="candidateClassName">NSTextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="_indicatorImage">
+							<string key="name">_indicatorImage</string>
+							<string key="candidateClassName">NSImageView</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="_leftVerticalGuageView">
 							<string key="name">_leftVerticalGuageView</string>
