--- a/KinectWings/en.lproj/MainMenu.xib
+++ b/KinectWings/en.lproj/MainMenu.xib
@@ -1345,7 +1345,7 @@
 							<string key="NSFrame">{{123, 16}, {102, 48}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="513623618"/>
+							<reference key="NSNextKeyView" ref="438068151"/>
 							<int key="NSViewLayerContentsRedrawPolicy">2</int>
 							<string key="NSReuseIdentifierKey">_NS:687</string>
 							<bool key="NSEnabled">YES</bool>
@@ -1370,6 +1370,7 @@
 							<string key="NSFrame">{{494, 0}, {129, 46}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
 							<reference key="NSWindow"/>
+							<reference key="NSNextKeyView"/>
 							<int key="NSViewLayerContentsRedrawPolicy">2</int>
 							<string key="NSReuseIdentifierKey">_NS:3944</string>
 							<bool key="NSEnabled">YES</bool>
@@ -1422,7 +1423,7 @@
 									<string key="NSFrame">{{76, 20}, {20, 20}}</string>
 									<reference key="NSSuperview" ref="291780441"/>
 									<reference key="NSWindow"/>
-									<reference key="NSNextKeyView" ref="438068151"/>
+									<reference key="NSNextKeyView" ref="272353977"/>
 									<bool key="NSViewIsLayerTreeHost">YES</bool>
 									<int key="NSViewLayerContentsRedrawPolicy">2</int>
 									<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -1456,7 +1457,7 @@
 									<string key="NSFrame">{{48, 20}, {20, 160}}</string>
 									<reference key="NSSuperview" ref="291780441"/>
 									<reference key="NSWindow"/>
-									<reference key="NSNextKeyView" ref="272353977"/>
+									<reference key="NSNextKeyView" ref="513623618"/>
 									<bool key="NSViewIsLayerTreeHost">YES</bool>
 									<int key="NSViewLayerContentsRedrawPolicy">2</int>
 									<string key="NSReuseIdentifierKey">_NS:1192</string>
@@ -1489,8 +1490,8 @@
 										<reference key="NSControlView" ref="375331650"/>
 										<reference key="NSBackgroundColor" ref="177764204"/>
 										<object class="NSColor" key="NSTextColor">
-											<int key="NSColorSpace">1</int>
-											<bytes key="NSRGB">MC43NTQyNjQ5ODcyIDAuMDA4Mzc0MTgwMTQyIDAuMDI0NzQ1Mzk0NDMAA</bytes>
+											<int key="NSColorSpace">2</int>
+											<bytes key="NSRGB">MC45OTIxNTY5MjI4IDEgMC45ODgyMzUzNTQ0AA</bytes>
 										</object>
 									</object>
 								</object>
